fix: replace corrupted files with verified sources (batch 1/4 — domain models)