@@ -1,41 +1,55 @@
 package ru.lifegame.assets.domain.model.asset;
 
+import java.util.Collections;
 import java.util.List;
 
 /**
- * Top-level specification for a single game asset (character, location, pet…).
+ * Complete specification for a layered asset, parsed from a unified XML file.
+ * This is the central domain model consumed by the LayeredAssetGenerator.
  *
- * <p>An {@code AssetSpec} is the central value object passed through every
- * layer of the asset-generation pipeline.  It is intentionally immutable;
- * all mutable state lives in the infrastructure layer.</p>
- *
- * @param id          Unique asset identifier (e.g., "tanya_idle").
- * @param category    High-level category: "character", "location", "pet", etc.
- * @param description Human-readable description used in generation prompts.
- * @param layers      Ordered list of visual layers.
- * @param animations  Animation sequences for this asset.
- * @param palettes    Named colour palettes referenced by layers.
- * @param variations  Time-of-day colour variations.
- * @param naming      File-naming conventions for output artefacts.
- * @param constraints Physical size and format constraints.
+ * @param entityType   "characters", "locations", "pets"
+ * @param entityName   snake_case name of the entity
+ * @param version      spec version string
+ * @param layers       ordered list of layers to generate
+ * @param colorPalette color palette to use
+ * @param animations   list of animation specifications (may be empty for static-only assets)
+ * @param timeOfDayVariations time-of-day variations (for locations; may be empty)
+ * @param naming       naming conventions
+ * @param constraints  technical constraints
  */
 public record AssetSpec(
-        String id,
-        String category,
-        String description,
+        String entityType,
+        String entityName,
+        String version,
         List<AssetLayer> layers,
+        ColorPalette colorPalette,
         List<AnimationSpec> animations,
-        List<ColorPalette> palettes,
-        List<TimeOfDayVariation> variations,
+        List<TimeOfDayVariation> timeOfDayVariations,
         NamingSpec naming,
         AssetConstraints constraints
 ) {
     public AssetSpec {
-        if (id == null || id.isBlank())       throw new IllegalArgumentException("Asset id must not be blank");
-        if (category == null || category.isBlank()) throw new IllegalArgumentException("Asset category must not be blank");
-        layers     = List.copyOf(layers);
-        animations = List.copyOf(animations);
-        palettes   = List.copyOf(palettes);
-        variations = List.copyOf(variations);
+        if (entityType == null || entityType.isBlank()) {
+            throw new IllegalArgumentException("entityType must not be blank");
+        }
+        if (entityName == null || entityName.isBlank()) {
+            throw new IllegalArgumentException("entityName must not be blank");
+        }
+        if (layers == null || layers.isEmpty()) {
+            throw new IllegalArgumentException("layers must not be empty");
+        }
+        layers = Collections.unmodifiableList(layers);
+        animations = animations != null ? Collections.unmodifiableList(animations) : List.of();
+        timeOfDayVariations = timeOfDayVariations != null
+                ? Collections.unmodifiableList(timeOfDayVariations) : List.of();
+        if (colorPalette == null) {
+            colorPalette = ColorPalette.projectDefault();
+        }
+        if (constraints == null) {
+            constraints = AssetConstraints.defaults();
+        }
+        if (naming == null) {
+            naming = new NamingSpec(entityType, entityName, null);
+        }
     }
 }
